<resources>
    <string name="app_name">ChatApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toolbar_text_messages">Messages</string>
    <string name="toolbar_text_login">Login</string>
    <string name="login_welcome_text">Welcome</string>
    <string name="login_email_hint">Email or login</string>
    <string name="login_password_hint">Password</string>
    <string name="login_sign_in_btn_text">Sign In</string>
    <string name="login_dont_have_account_text">Don\'t have an account</string>
    <string name="sign_up_link_text">sign up</string>
    <string name="register_create_account_text">Create Account</string>
    <string name="register_name_hint">Name</string>
    <string name="register_email_hint">Email</string>
    <string name="register_password_hint">Password</string>
    <string name="register_sign_up_btn_text">Sign Up</string>
    <string name="register_already_have_account_text">Already have an account</string>
    <string name="sign_in_link_text">sign in</string>
    <string name="toolbar_registration">Registration</string>
    <string name="toolbar_login">Login</string>
    <string name="toast_data_update">Данные обновлены</string>
    <string name="register_phone_hint">Phone</string>
</resources>