<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.register.LoginFragment">

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_create_account_text"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/large_text"
        app:layout_constraintBottom_toTopOf="@+id/nameInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintVertical_chainStyle="packed" />

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/emailInputLayout"-->
<!--        android:hint="@string/login_email_hint"-->
<!--        android:inputType="textEmailAddress"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/tvWelcome"-->
<!--        app:layout_constraintVertical_bias="0.5"-->
<!--        android:autofillHints="emailAddress"-->
<!--        style="@style/text_input_layout">-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/emailInput"-->
<!--            style="@style/text_input_edit_text"-->
<!--            android:inputType="textPassword" />-->
<!--    </com.google.android.material.textfield.TextInputLayout>-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInputLayout"
        style="@style/text_input_layout"
        android:hint="@string/register_name_hint"
        app:layout_constraintBottom_toTopOf="@+id/emailInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome"
        app:layout_constraintVertical_bias="0.5" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameInput"
            android:autofillHints="name"
            android:inputType="text"
            style="@style/text_input_edit_text"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        style="@style/text_input_layout"
        android:hint="@string/register_email_hint"
        app:layout_constraintBottom_toTopOf="@+id/phoneNumberLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameInputLayout"
        app:layout_constraintVertical_bias="0.5" >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInput"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            style="@style/text_input_edit_text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneNumberLayout"
        style="@style/text_input_layout"
        android:hint="@string/register_phone_hint"
        app:layout_constraintBottom_toTopOf="@+id/passwordRegisterLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInputLayout"
        app:layout_constraintVertical_bias="0.5" >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneNumberInput"
            android:inputType="phone"
            android:autofillHints="phone"
            style="@style/text_input_edit_text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordRegisterLayout"
        style="@style/text_input_layout"
        android:hint="@string/register_password_hint"
        app:passwordToggleEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/btnSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumberLayout"
        app:layout_constraintVertical_bias="0.5" >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInput"
            android:inputType="textPassword"
            android:importantForAutofill="no"
            style="@style/text_input_edit_text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_large_margin"
        android:text="@string/register_sign_up_btn_text"
        app:layout_constraintBottom_toTopOf="@+id/tvHaveAccount"
        app:layout_constraintEnd_toEndOf="@id/passwordRegisterLayout"
        app:layout_constraintStart_toStartOf="@id/passwordRegisterLayout"
        app:layout_constraintTop_toBottomOf="@+id/passwordRegisterLayout"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/tvHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="@dimen/vertical_margin"
        android:text="@string/register_already_have_account_text"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/btnSignUp"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUp"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/signInLink"
        style="@style/sign_in_link"
        android:background="@drawable/ripple_effect"
        android:text="@string/sign_in_link_text"
        app:layout_constraintBottom_toBottomOf="@+id/tvHaveAccount"
        app:layout_constraintEnd_toEndOf="@+id/btnSignUp"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toEndOf="@id/tvHaveAccount"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUp"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>